# awaxen-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.ai  Makefile  README.md  alembic.ini  app.py  celerybeat-schedule  docker-compose.yml  pyproject.toml  requirements.ai.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0af355c4e651_add_auth0_fields_to_user.py  20260106_add_awaxen_core_tables.py  20260110_add_module_system_and_onboarding.py  20260110_add_notification_tables.py  75790e51fe08_add_notification_tables.py  fix_roles_cleanup.py
app/: __init__.py  auth.py  celery_app.py  config.py  constants.py  exceptions.py  extensions.py  models.py  mqtt_client.py  realtime.py  routes.py  services.py  version.py
app/api/: __init__.py  helpers.py  routes_ai.py  routes_assets.py  routes_auth.py  routes_automations.py  routes_billing.py  routes_commands.py  routes_dashboard.py  routes_devices.py  routes_discovery.py  routes_enums.py  routes_export.py  routes_firmware.py  routes_gateways.py  routes_general.py  routes_integrations.py  routes_market.py  routes_meta.py  routes_nodes.py  routes_notifications.py  routes_organizations.py  routes_roles.py  routes_sites.py  routes_tariffs.py  routes_telemetry.py  routes_users.py  routes_vpp.py  routes_wallet.py  routes_weather.py  routes_webhooks.py
app/data/: changelog.json  integration_providers.py
app/models/: __init__.py  ai_analysis.py  audit.py  automation.py  base.py  billing.py  device.py  enums.py  export.py  firmware.py  gateway.py  integration.py  market.py  notification.py  organization.py  rbac.py  savings.py  user.py  wallet.py  weather.py
app/services/: __init__.py  anomaly_service.py  asset_service.py  automation_engine.py  device_service.py  enum_service.py  epias_service.py  helpers.py  market_service.py  node_service.py  notification_service.py  savings_service.py  shelly_service.py  site_service.py  storage_service.py  tariff_service.py  (+3 more)
config/: mosquitto.conf
docs/: FRONTEND_INTEGRATION.md  PROJECT_OVERVIEW.md  realtime-client-example.ts
homeassistant/: README.md  configuration.yaml.example
scripts/: README.md  __init__.py  deploy.sh  entrypoint.sh  generate-encryption-key.py  init-db.sql  init-timescale.sql  migrate_v6_savings.sql  seed_data.py  seed_plans.sql  setup-mqtt.sh  setup-server.sh  sim_battery_storage.py  sim_discovery_probe.py  sim_ev_charger.py  sim_grid_meter.py  sim_inverter_fast.py  sim_pv_tracker.py  start.ps1  start.sh  start_all_simulators.py  telemetry_simulator.py  update_location.sql  wait_for_db.py
src/: __init__.py  main.py  worker.py
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_health.py  test_models.py  test_services.py
(+95 files in other folders)
